synched swimming, idk why synchronized isnt synchronizing